Move background image to main element to address footer layout issue, check posts length after deleting the last post to ensure smooth UX

--- a/blog-web-application/public/styles/main.css
+++ b/blog-web-application/public/styles/main.css
@@ -8,6 +8,9 @@ html, body{
     height: 100dvh;
     font-family: "Raleway", sans-serif;
     color: whitesmoke;
+
+}
+main {
     background-image: url("../images/ren-hosoya-xYI_dcYIQas-unsplash (1).jpg");
     background-size: cover;
     background-position: center;
@@ -74,6 +77,7 @@ button{
     background-color: whitesmoke;
     margin-top: 50px;
 }
+
 footer{
     font-size: 0.8rem;
     padding: 20px;
